--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <script src="includes/js/app.js"></script>
     <title>Primer Entrega JS</title>
     <h1>Nuevo titulo</h1>
+    <P>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dignissimos in, cupiditate inventore impedit nisi quae voluptatem accusantium minus cum. Asperiores voluptate sunt modi optio animi eos expedita minima laudantium?
+    </P>
+    <button>
+        Nuevo boton
+    </button>
+
+    boxes
 </head>
 <body>
     
