--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dignissimos in, cupiditate inventore impedit nisi quae voluptatem accusantium minus cum. Asperiores voluptate sunt modi optio animi eos expedita minima laudantium?
     </P>
     <button>
-        Nuevo boton
+        Nuevo nuevo cambio 
     </button>
-
-    boxes
+    testiando ando para ver si sirve
 </head>
 <body>
     
